1.移除無效檔案 2.增加匯出zip功能

--- a/ImportExportTest/ImportExportTest.csproj
+++ b/ImportExportTest/ImportExportTest.csproj
@@ -43,8 +43,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Core.Utility">
-      <HintPath>..\..\..\..\MyProject\Library\Core\Core.Utility\bin\Release\Core.Utility.dll</HintPath>
+    <Reference Include="Core.Utility, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Dropbox\MyProject\Library\Core\Core.Utility\bin\Release\Core.Utility.dll</HintPath>
     </Reference>
     <Reference Include="EPPlus, Version=4.5.3.3, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
       <HintPath>..\packages\EPPlus.4.5.3.3\lib\net40\EPPlus.dll</HintPath>
