--- a/ImportExportTest/packages.config
+++ b/ImportExportTest/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EPPlus" version="4.5.3.3" targetFramework="net452" />
   <package id="LinqToExcel" version="1.11.0" targetFramework="net462" />
+  <package id="MiniExcel" version="0.10.0" targetFramework="net472" />
 </packages>
